# django_spam_recycler

./: .env  .gitignore  =  =1.2  =59.2.0  Dockerfile  README.md  definitions.json  docker-compose.yml  pyproject.toml  re_create_containers.sh  supervisor.conf
app/: supervisor.conf
app/accounts/: models.py
app/config/: celery.py  settings.py
app/mailboxes/: tests.py
app/reports/: forms.py  tasks.py  urls.py
app/scripts/: set_up_user_queues.py
app/shared_code/: aiospamc_utils.py  worker_utils.py
app/staticfiles/: staticfiles.json
app/templates/: _base.html
code/config/: celery.py  settings.py
code/shared_code/: aiospamc_utils.py
config/: celery.py  settings.py  urls.py
mailboxes/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
mailboxes/migrations/: 0001_initial.py
rabbitmq/: definitions.json  rabbitmq.conf
reports/: admin.py  forms.py  mixins.py  models.py  tasks.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_auto_20211128_1155.py  0003_messagemodel_orginal_message.py
scripts/: create_exclusive_queue.py  create_single_active_worker_queue.py  set_up_user_queues.py
shared_code/: aiospamc_utils.py  imap_sync.py  name_utils.py  queries.py  rabbit_mq.py  worker_utils.py
spam_recycler/: supervisor.conf
spam_recycler/config/: celery.py  settings.py
spam_recycler/mailboxes/: apps.py  forms.py  models.py  urls.py
spam_recycler/shared_code/: aiospamc_utils.py  imap_sync.py
spam_recycler/staticfiles/: staticfiles.json
spamassasin/: Dockerfile  spamd.sh
spamassasin_docker/: supervisor.conf
static/css/: base.css  (+1 more)
templates/: _base.html
(+35 files in other folders)
