[tool.poetry]
name = "spam_segregator"
version = "0.6.0"
description = ""
authors = ["KubaTaba1uga <jakub@buczynski.net.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
aiospamc = "^0.7.1"
redis = "^4.0.2"
celery = "^5.2.1"
aioimaplib = "^0.9.0"

[tool.poetry.dev-dependencies]
flower = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
