[tool.poetry]
name = "spam_segregator"
version = "0.6.0"
description = ""
authors = ["KubaTaba1uga <jakub@buczynski.net.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.4"
aiospamc = "^0.7.1"
celery = "^5.2.1"
aioimaplib = "^0.9.0"
whitenoise = "5.2.0"
django-allauth = "0.43.0"
django-crispy-forms = "1.10.0"
imap-tools = "^0.50.1"
pika = "^1.2.0"


[tool.poetry.dev-dependencies]
flower = "^1.0.0"
django-debug-toolbar = "3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
